# hevy-mcp

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  smoke_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  publish.yml
src/hevy_mcp/: __init__.py  cache.py  errors.py  formatters.py  hevy_client.py  schemas.py  server.py
src/hevy_mcp/tools/: __init__.py  analytics.py  folders.py  routines.py  templates.py  webhooks.py  workouts.py
tests/: conftest.py  test_analytics.py  test_routine_create_flow.py  test_routines_update.py  test_workouts.py
tests/fixtures/: templates.json  workouts_page1.json
