[project]
name = "hevy-mcp"
version = "0.1.2"
description = "Model Context Protocol server for the Hevy workout-tracking API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vellarasan" }]
maintainers = [{ name = "Vellarasan", email = "vellarasan21@gmail.com" }]
keywords = ["mcp", "claude", "hevy", "workout", "fitness", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "rapidfuzz>=3.6",
    "anyio>=4.3",
    "uvicorn>=0.30",
    "starlette>=0.37",
]

[project.urls]
Homepage = "https://github.com/Vellarasan/hevy-mcp"
Repository = "https://github.com/Vellarasan/hevy-mcp"
Issues = "https://github.com/Vellarasan/hevy-mcp/issues"
Changelog = "https://github.com/Vellarasan/hevy-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
hevy-mcp = "hevy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hevy_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
